# coding-katas

./: .gitignore  README.md
counting-dna-nucleotides/: README.md
counting-dna-nucleotides/python/: pyproject.toml
counting-dna-nucleotides/python/python/: count_dna_nucleotides.py
counting-dna-nucleotides/python/tests/: test_count_dna_nucleotides.py
dna-to-rna-conversion/: README.md
dna-to-rna-conversion/python/: pyproject.toml
dna-to-rna-conversion/python/python/: convert_dna_to_rna.py
dna-to-rna-conversion/python/tests/: test_dna_rna_conversion.py
dna-to-rna-conversion/rust/src/: main.rs
python/katas/: README.md  pyproject.toml
python/katas/katas/: complementing_dna_strand.py  convert_dna_to_rna.py  gc_content.py  hamming_distance.py  mendel_first_law.py  motif_dna.py  rabbits_and_recurrence_relations.py  rna_to_protein_sequence_translation.py
python/katas/tests/: test_complementing_dna_strand.py  test_convert_dna_to_rna.py  test_count_dna_nucleotides.py  test_gc_content.py  test_hamming_distance.py  test_katas.py  test_mendel_first_law.py  test_motif_dna.py  test_rabbits_and_recurrence_relations.py  test_rna_to_protein_sequence_translation.py
rna-to-protein-sequence-translation/: README.md
rna-to-protein-sequence-translation/python/python/: rna_to_protein_sequence_translation.py
rna-to-protein-sequence-translation/python/tests/: test_rna_to_protein_sequence_translation.py
rna-to-protein-sequence-translation/rust/src/: main.rs
rust/katas/src/: main.rs
