[tool.poetry]
name = "python"
version = "0.1.0"
description = "Code kata for DNA to RNA conversion"
authors = ["Christopher Bartling <chris.bartling@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
