[tool.poetry]
name = "katas"
version = "0.1.0"
description = ""
authors = ["Christopher Bartling <chris.bartling@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
